...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/createANewAccountButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:background="@color/main_orange"
        android:text="Create Account"
        android:textColor="@color/black"
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <EditText
        android:id="@+id/createAccountEnterPass"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/button_bg"
        android:ems="10"
        android:inputType="textPassword"
        android:text=""
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325" />

    <EditText
        android:id="@+id/createAccountEnterUsername"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/button_bg"
        android:ems="10"
        android:inputType="text"
        android:text=""
...
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <EditText
        android:id="@+id/createAccountPageEnterFirstName"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/button_bg"
        android:ems="10"
        android:inputType="text"
        android:text=""
...
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <EditText
        android:id="@+id/createAccountPageEnterLastName"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/button_bg"
        android:ems="10"
        android:inputType="text"
        android:text=""
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525" />

    <RadioGroup
        android:id="@+id/createAccountSelectUser"
        android:layout_width="150dp"
        android:layout_height="108dp"
        android:background="@drawable/button_bg"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintVertical_bias="0.735">

        <RadioButton
            android:id="@+id/athleteChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Athlete"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/coachChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Coach"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/gymRatChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gym Rat"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RadioGroup>
...
