...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        />

    <EditText
        android:id="@+id/athleteUsernameEditText"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:hint="Athlete's Username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/repsEditText"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:hint="Reps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:hint="Weight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/exerciseSpinner"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:hint="Exercises"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/workoutNameEditText"
        android:layout_width="351dp"
        android:layout_height="69dp"
        android:hint="Workout Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

    <Button
        android:id="@+id/assignWorkoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Assign Workout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.843" />

    <Button
        android:id="@+id/backCoachHomeButton"
        android:layout_width="68dp"
        android:layout_height="42dp"
        android:text="back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
...
