...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_bg"
    tools:context=".CreateTeamActivity">

    <Button
        android:id="@+id/savingButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@drawable/save_button"
        android:text="SAVE"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#933C3C"
...
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/teamNameUnique"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter text here" />

    </com.google.android.material.textfield.TextInputLayout>

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/athCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Athele Invite Code"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

...
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/coachCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Coach Invite Code"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

...
